add files to ng210

--- a/ng210/01-konzol/console.css
+++ b/ng210/01-konzol/console.css
@@ -1,4 +1,10 @@
+* {
+    box-sizing: border-box;
+}
+
 console {
+    padding: 0em;
+    margin: 0em;
     display: flex;
     flex-direction: column;
     position: absolute;
