--- a/ng210/01-konzol/style.css
+++ b/ng210/01-konzol/style.css
@@ -3,10 +3,10 @@
 }
 
 body {
-    margin:0px;
-    padding:0px;
+    background-color: pink;
+    margin: 0;
     width: 100vw;
-    height:100vh;
+    height: 100vh;
 }
 
 .panel {
