--- a/ng210/index-style.css
+++ b/ng210/index-style.css
@@ -3,11 +3,10 @@
 }
 
 body {
-    background-color: #aec;
     width: 100vw;
     height: 100vh;
-    margin: 0px;
-    padding: 0em;
+    margin: 0;
+    padding: 0;
     background-color: #cfe;
     overflow: hidden;
 }
